src/elsi.h

void c_elsi_init(elsi_handle *handle_c,
                 int solver,
                 int parallel_mode,
                 int matrix_format,
                 int n_basis,
                 double n_electron,
                 int n_state);
void c_elsi_set_mpi(elsi_handle handle_c,
                    MPI_Fint mpi_comm);
void c_elsi_set_mpi_global(elsi_handle handle_c,
                           MPI_Fint mpi_comm_global);
void c_elsi_set_spin(elsi_handle handle_c,
                     int n_spin,
                     int i_spin);
void c_elsi_set_kpoint(elsi_handle handle_c,
                       int n_kpt,
                       int i_kpt,
                       double weight);
void c_elsi_set_blacs(elsi_handle handle_c,
                      int blacs_ctxt,
                      int block_size);
void c_elsi_set_csc(elsi_handle handle_c,
                    int nnz,
                    int nnz_l,
                    int n_lcol,
                    int *row_ind,
                    int *col_ptr);
void c_elsi_finalize(elsi_handle handle_c);
void c_elsi_ev_real(elsi_handle handle_c,
                    double *ham,
                    double *ovlp,
                    double *eval,
                    double *evec);
void c_elsi_ev_complex(elsi_handle handle_c,
                       double _Complex *ham,
                       double _Complex *ovlp,
                       double *eval,
                       double _Complex *evec);
void c_elsi_ev_real_sparse(elsi_handle handle_c,
                           double *ham,
                           double *ovlp,
                           double *eval,
                           double *evec);
void c_elsi_ev_complex_sparse(elsi_handle handle_c,
                              double _Complex *ham,
                              double _Complex *ovlp,
                              double *eval,
                              double _Complex *evec);
void c_elsi_dm_real(elsi_handle handle_c,
                    double *ham,
                    double *ovlp,
                    double *dm,
                    double *energy);
void c_elsi_dm_complex(elsi_handle handle_c,
                       double _Complex *ham,
                       double _Complex *ovlp,
                       double _Complex *dm,
                       double *energy);
void c_elsi_dm_real_sparse(elsi_handle handle_c,
                           double *ham,
                           double *ovlp,
                           double *dm,
                           double *energy);